fix z-index

--- a/src/app/utility/nav/nav.component.scss
+++ b/src/app/utility/nav/nav.component.scss
@@ -15,6 +15,7 @@
   margin-left: 250px;
   padding: 20px;
   transition: margin-left 0.3s ease-in-out;
+  z-index: 100;
 }
 
 #sidebar {
